[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/MenuScene.gd" id="1_menu"]

[node name="MenuScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "=== COWARDLY IRREGULAR ==="
horizontal_alignment = 1

[node name="VictoryLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 100.0
offset_right = 150.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 20
text = "VICTORY!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Continue"

[node name="StatusButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Status"

[node name="StatusPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="StatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="StatusLabel" type="RichTextLabel" parent="StatusPanel/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Loading..."

[node name="CloseButton" type="Button" parent="StatusPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_bottom = 30.0
grow_horizontal = 0
text = "X"
